# fnshr-lite

apps/backend/: .gitignore  Cargo.toml
apps/backend/src/: main.rs
apps/backend/src/components/: controller.rs  database.rs  mod.rs  repository.rs  routes.rs  service.rs  utils.rs
apps/backend/src/components/controllers/: health.rs  task.rs
apps/backend/src/components/database/: models.rs  mongodb.rs
apps/backend/src/components/repositories/: task.rs
apps/backend/src/components/routes/: health.rs  tasks.rs
apps/backend/src/components/services/: task.rs
apps/backend/src/components/utils/: env.rs
